# juicefs

./: .gitignore  .gitmodules  Dockerfile.cfmount  Makefile  go.mod  go.sum  workers-plan-v2.md  workers-plan.md
cf-meta/: .gitignore  buf.gen.yaml  package.json  pnpm-lock.yaml  tsconfig.json
cmd/: access_profile.go  access_profile_test.go  cache_server.go  cache_server_noop.go  flags.go  get_mapping_plan.go  main.go  main_test.go  mount.go  mount_unix.go  shared_extent_sources.go  shared_extent_sources_uffd_linux_test.go
cmd/bench_cache_client/: main.go
cmd/bench_cache_full/: main.go
cmd/bench_cache_server/: main.go
cmd/cfmount/: main.go
hack/sharedcache/: lima.yaml  setup.sh
integration/: firecracker_access_profile_linux_test.go  firecracker_access_profile_other_test.go
pkg/chunk/: cache_bench_export.go  cache_client.go  cache_client_other.go  cache_pread_unix.go  cache_proto.go  cache_server.go  cache_server_bench_test.go  cache_server_test.go  cached_store.go  cached_store_test.go  chunk.go  disk_cache.go
pkg/compress/: compress_pure.go
pkg/fuse/: fuse.go  private_linux_test.go
pkg/meta/: base.go  base_test.go  interface.go  redis.go  sql.go  tkv.go  tkv_mem.go  tkv_wskv.go  tkv_wskv_test.go  wskv_server.go
pkg/vfs/: access_profile.go  access_profile_test.go  internal.go  shared_extent_sources.go  shared_extent_sources_test.go  (+1 more)
sdk/rust/smartmap/: Cargo.toml  README.md
sdk/rust/smartmap/include/: juicefs_smartmap.h
sdk/rust/smartmap/src/: ffi.rs  lib.rs  mapping.rs  protocol.rs  uds.rs  uffd.rs
test-results/: shmipc-bench-results.md
(+27 files in other folders)
