[package]
name = "juicefs-smartmap"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "Embeddable Rust client for JuiceFS Smartmap memory mappings"

[lib]
crate-type = ["rlib", "cdylib", "staticlib"]

[dependencies]
libc = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
